feat(auth): add dev auth bypass and improve nginx proxy headers
- Add VITE_BYPASS_AUTH env variable for development auth skipping
- Update ProtectedRoute to handle auth bypass
- Enhance nginx proxy headers with X-Forwarded-For and X-Forwarded-Proto
- Modify App.tsx to handle auth bypass logic

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,12 +11,20 @@ server {
     }
 
     # Proxy API requests to the backend
-    # You can override the backend URL using environment variables or by editing this file
     location /api/ {
         # Assuming the backend is running on localhost:8000 on the host machine
-        # For Docker, you might use host.docker.internal or the service name
         proxy_pass http://host.docker.internal:8000/;
+        
+        # Pass the original host header
         proxy_set_header Host $host;
+        
+        # Pass the real client IP
         proxy_set_header X-Real-IP $remote_addr;
+        
+        # Append the client IP to the list of forwarded IPs (Standard for proxies)
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        
+        # Pass the protocol (http or https)
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
